--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ canvas {
   width:30%;
   height:100%;
   float:left;
-  margin:2px;
-  border:2px solid black;
+  margin:.5px;
+  border:1px solid black;
 }
 
