--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
 	text-align: center;
 }
 
+position{
+  vertical-align:center;
+}
+
 figure {
 	display:none;
 	margin: 10px;
@@ -46,7 +50,7 @@ canvas {
   width:30%;
   height:100%;
   float:left;
-  margin:.5px;
+  margin:2px;
   border:1px solid black;
 }
 
