--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,22 @@ canvas {
 }
 
 .position{
+  opacity:0.3;
   width:30%;
   height:100%;
   float:left;
   margin:2px;
-  border:1px solid black;
+  border-radius:20px;
+  border:1px solid white;
+  box-shadow:
+    inset 0 0 5px #fff,
+    inset 2px 0 8px #f0f,
+    inset -2px 0 8px #0ff,
+    inset 2px 0 3px #f0f,
+    inset -2px 0 3px #0ff,
+    0 0 5px #fff,
+    -1px 0 8px #f0f,
+    1px 0 8px #0ff;
 }
 
 
