--- a/css/style.css
+++ b/css/style.css
@@ -34,16 +34,21 @@ canvas {
 
 
 #fretboard{
-  width:80%;
+  width:100%;
   height:100%;
    position:absolute;
   top:0%;
   left:0%;
+  background:url(https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2FUntitled%20presentation.jpg?v=1581039982013);
+  background-size: 100% 95%;
+  padding-left:5%;
+
 }
 
 .string{
   height:15%;
   width:100%;  
+  
 }
 
 .position{
@@ -52,17 +57,9 @@ canvas {
   height:100%;
   float:left;
   margin:2px;
-  border-radius:20px;
+  border-radius:10px;
   border:1px solid white;
-  box-shadow:
-    inset 0 0 5px #fff,
-    inset 2px 0 8px #f0f,
-    inset -2px 0 8px #0ff,
-    inset 2px 0 3px #f0f,
-    inset -2px 0 3px #0ff,
-    0 0 5px #fff,
-    -1px 0 8px #f0f,
-    1px 0 8px #0ff;
+  color:transparent;
 }
 
 
