--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 
 
 body {
-	margin: 20px;
 	font: 1.5em/1.2 sans-serif;
 	text-align: center;
+  background:black;
+  padding:10px;
 }
 
 position{
@@ -34,14 +35,29 @@ canvas {
 
 
 #fretboard{
-  width:80%;
-  height:90%;
-   position:absolute;
+  width:100%;
+  height:100%;
+   position:relative;
   top:0%;
   left:0%;
   background:url(https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2FUntitled%20presentation.jpg?v=1581039982013);
   background-size: 100% 95%;
   padding-left:5%;
+    width:80%;
+
+
+}
+
+
+#chordboard{
+  width:100%;
+  height:100%;
+   position:relative;
+  top:0%;
+  left:0%;
+  padding-left:5%;
+    width:80%;
+
 
 }
 
@@ -59,9 +75,30 @@ canvas {
   margin:2px;
   border-radius:10px;
   border:1px solid white;
+  background:gray;
   color:transparent;
 }
 
+.set{
+  margin:5%;
+  height:70px;
+  width:100%;  
+  
+}
+
+.chord{
+  opacity:0.3;
+  width:30%;
+  padding:20px;
+  height:100%;
+  float:left;
+  margin:2px;
+  border-radius:10px;
+  border:1px solid white;
+  background:gray;
+  color:white;
+  
+}
 
  .load {
    background:white;
@@ -96,5 +133,4 @@ margin:auto;
    80% {opacity:1; width:100% }
   100% {opacity: 0;  width:0%;}
 }
-
 
