--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,30 @@
 body {
 	font: 1.5em/1.2 sans-serif;
 	text-align: center;
-  background:black;
+
   padding:10px;
+
+  height:100%;
+  width:100%;
+
+background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
 
 position{
   vertical-align:center;
@@ -134,3 +155,15 @@ margin:auto;
   100% {opacity: 0;  width:0%;}
 }
 
+.tab-content{
+  width:100%;
+}
+
+.nav-item{ color:#FCB900;}
+
+.nav-link{color:#FCB900}
+
+.active{color:#FCB900;
+}
+
+a {color:#FF3501}
