--- a/css/style.css
+++ b/css/style.css
@@ -1,169 +1,1 @@
-
-
-body {
-	font: 1.5em/1.2 sans-serif;
-	text-align: center;
-
-  padding:10px;
-
-  height:100%;
-  width:100%;
-
-background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-
-
-position{
-  vertical-align:center;
-}
-
-figure {
-	display:none;
-	margin: 10px;
-	vertical-align: top;
-}
-
-figcaption {
-	text-align: left;
-	font-weight: bold;
-}
-
-video, canvas {
-  display:none;
-	width: 480px;
-	height: 360px;
-	background-color: #999;
-}
-
-canvas {
-	image-rendering: pixelated;
-}
-
-
-#fretboard{
-  width:100%;
-  height:100%;
-   position:relative;
-  top:0%;
-  left:0%;
-  background:url(https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2FUntitled%20presentation.jpg?v=1581039982013);
-  background-size: 100% 95%;
-  padding-left:5%;
-    width:80%;
-
-
-}
-
-
-#chordboard{
-  width:100%;
-  height:100%;
-   position:relative;
-  top:0%;
-  left:0%;
-  padding-left:5%;
-    width:80%;
-
-
-}
-
-.string{
-  height:15%;
-  width:100%;  
-  
-}
-
-.position{
-  opacity:0.3;
-  width:30%;
-  height:100%;
-  float:left;
-  margin:2px;
-  border-radius:10px;
-  border:1px solid white;
-  background:gray;
-  color:transparent;
-}
-
-.set{
-  margin:5%;
-  height:70px;
-  width:100%;  
-  
-}
-
-.chord{
-  opacity:0.3;
-  width:30%;
-  padding:20px;
-  height:100%;
-  float:left;
-  margin:2px;
-  border-radius:10px;
-  border:1px solid white;
-  background:gray;
-  color:white;
-  
-}
-
- .load {
-   background:white;
-position:absolute;
- z-index:500;
-width:100%;
-height:100%;
-text-align:center;
-margin:auto;
-  -webkit-animation: disappear 10s forwards ; /* Safari */
-  animation: disappear 10s forwards ;
-}
-  
-.loader1 {
-	position:absolute;
-   margin:auto;
-     left:0px;
-    right:0px;
-  width: 50%;
-  top:10%;
-}
-
-/* Safari */
-@-webkit-keyframes disappear {
-  0% { -webkit-opacity: 1; }
-   80% { -webkit-opacity:1;  width:100%}
-  100% { -webkit-opacity: 0; width:0%;}
-}
-
-@keyframes disappear {
-  0% { opacity: 1; }
-   80% {opacity:1; width:100% }
-  100% {opacity: 0;  width:0%;}
-}
-
-.tab-content{
-  width:100%;
-}
-
-.nav-item{ color:#FCB900;}
-
-.nav-link{color:#FCB900}
-
-.active{color:#FCB900;
-}
-
-a {color:#FF3501}
+body{font: 1.5em/1.2 sans-serif;text-align: center; padding:10px; height:100%; width:100%;background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);background-size: 400% 400%;animation: gradient 15s ease infinite;}@keyframes gradient{0%{background-position: 0% 50%;}50%{background-position: 100% 50%;}100%{background-position: 0% 50%;}}position{vertical-align:center;}figure{display:none;margin: 10px;vertical-align: top;}figcaption{text-align: left;font-weight: bold;}video, canvas{display:none;width: 480px;height: 360px;background-color: #999;}canvas{image-rendering: pixelated;}#fretboard{width:100%; height:100%; position:relative; top:0%; left:0%; background:url(https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2FUntitled%20presentation.jpg?v=1581039982013); background-size: 100% 95%; padding-left:5%; width:80%;}#chordboard{width:100%; height:100%; position:relative; top:0%; left:0%; padding-left:5%; width:80%;}.string{height:15%; width:100%;}.position{opacity:0.3; width:30%; height:100%; float:left; margin:2px; border-radius:10px; border:1px solid white; background:gray; color:transparent;}.set{margin:5%; height:70px; width:100%;}.chord{opacity:0.3; width:30%; padding:20px; height:100%; float:left; margin:2px; border-radius:10px; border:1px solid white; background:gray; color:white;}.load{background:white;position:absolute; z-index:500;width:100%;height:100%;text-align:center;margin:auto; -webkit-animation: disappear 10s forwards ; /* Safari */ animation: disappear 10s forwards ;}.loader1{position:absolute; margin:auto; left:0px; right:0px; width: 50%; top:10%;}/* Safari */@-webkit-keyframes disappear{0%{-webkit-opacity: 1;}80%{-webkit-opacity:1; width:100%}100%{-webkit-opacity: 0; width:0%;}}@keyframes disappear{0%{opacity: 1;}80%{opacity:1; width:100%}100%{opacity: 0; width:0%;}}.tab-content{width:100%;}.nav-item{color:#FCB900;}.nav-link{color:#FCB900}.active{color:#FCB900;}a{color:#FF3501}
